# fly

./: .gitignore  README.md  test.py
Ubuntu/: BuildSLAM.sh  Config.json  StartRviz.sh  StartSLAM.sh  WslGUI.bat  offboard.py  rflysim.rviz  tf_cfg.yaml
scripts/cal/: cal.py
src/FAST_LIO/: CMakeLists.txt
src/FAST_LIO/config/: avia.yaml
src/FAST_LIO/launch/: mapping_avia.launch
src/FAST_LIO/src/: laserMapping.cpp
src/PathPlanning/trajectory_generator/: CMakeLists.txt  package.xml
src/PathPlanning/trajectory_generator/include/trajectory_generator/: trajectory_generator_waypoint.h
src/PathPlanning/trajectory_generator/launch/: test.launch
src/PathPlanning/trajectory_generator/launch/rviz_config/: test_traj.rviz
src/PathPlanning/trajectory_generator/src/: listen.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
src/aruco_det/: CMakeLists.txt  package.xml
src/aruco_det/launch/: aruco_det.launch
src/aruco_det/scripts/: aruco_det.py
src/circle_det/: CMakeLists.txt  package.xml
src/circle_det/launch/: circle_det.launch
src/circle_det/msg/: circles.msg
src/circle_det/src/: main.cpp
src/control/ius_msgs/: CMakeLists.txt  package.xml
src/control/ius_planner/: CMakeLists.txt  package.xml
src/control/ius_visualization/: CMakeLists.txt  config.rviz  package.xml
src/control/uav_control/: CMakeLists.txt  README.md
src/fast_lio/: CMakeLists.txt  README.md  package.xml
src/fast_lio/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/faster-lio/config/: avia.yaml
src/faster-lio/include/: laser_mapping.h
src/faster-lio/launch/: mapping_avia.launch
src/livox_ros_driver2/: CMakeLists.txt
src/state_machine/: CMakeLists.txt  package.xml
src/uav_control/: package.xml
ubuntu/: EnvSetup.sh  WinWSL.bat  WinWSLRunALL.bat  main.py  testRflyRosCtrl.py
(+87 files in other folders)
