<package>
  <version>0.0.0</version>
  <name>trajectory_generator</name>
  <description>trajectory_generator</description>
  <maintainer email="fgaoaa@connect.ust.hk">Fei Gao</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/waypoint_generator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


